<resources>
    <string name="app_name">Youth Connect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_ask_question">Ask Question</string>
    <string name="action_create_document">Create Document</string>
    <string name="splash_screen_bottom_text1">Dept. of Sports &amp; Youth Services</string>
    <string name="splash_screen_bottom_text">Designed &amp; Developed by Luminous Infoways.</string>
    <string name="no_internet_connection_title">Unable to connect</string>
    <string name="no_internet_connection_message">Internet not available, Cross check your internet connectivity and try again.</string>
    <string-array name="movie_serial_bg">
        <item>#24c6d5</item>
        <item>#57dd86</item>
        <item>#ad7dcf</item>
        <item>#ff484d</item>
        <item>#fcba59</item>
        <item>#24c6d5</item>
    </string-array>
    <string name="no_app_found_title">Unable to Open</string>
    <string name="no_app_found_message">There is no application available to open this file.</string>

    <string name="activity_ask_a_question_title">Ask Anything</string>
    <string name="activity_pending_question_title">UnAnswered</string>
    <string name="activity_answered_question_title">Answered</string>
    <string name="activity_published_question_title">Published</string>
    <string name="post_question_text">POST MY QUESTION</string>
    <string name="post_answer_text">POST ANSWER</string>
    <string name="activity_attach_file_title">Attach File</string>
    <string name="activity_doc_list_title">Documents</string>
    <string name="activity_nodal_officers_list_title">Nodal Officers</string>
    <string name="activity_change_password_title">Change Password</string>
    <string name="remove_photo">REMOVE</string>
    <string name="change_photo">CHANGE</string>
    <string name="submit">SUBMIT</string>
    <string name="password_changed_title">Password Changed</string>
    <string name="password_changed_description">Your password has been changed.\nPlease logout and login again to get your app work.</string>
    <string name="password_validation_msg">New password must contain at least one number (0-9),\nOne lowercase letter (a-z),\nOne uppercase letter (A-Z)\nand 1 Special char, between 6 to 15 chars !</string>
    <string name="ast"><![CDATA[<font fgcolor="red">*</font>]]></string>

    <!-- Pushbots Application ID  -->
    <string name="pb_appid">56d832b01779593a7d8b4567</string>
    <!-- Pushbots Secret ID  -->
    <string name="pb_secret_id">8410164200c83c658561530e3c8b66d5</string>
    <!-- GCM Sender ID -->
    <string name="pb_senderid">16925061759</string>
    <!-- Pushbots Log Level  log Tag "PB2" -->
    <string name="pb_logLevel">DEBUG</string>
</resources>
