<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/app_background"
    tools:context="com.luminousinfoways.sportsnyouth.sportsyouth.activity.MainActivity">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:layout_above="@+id/imgLogo"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"/>

    <TextView
        android:text="@string/splash_screen_bottom_text1"
        android:id="@+id/tvBottomText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginBottom="12dp"
        android:layout_above="@+id/tvBottomText"/>

    <TextView
        android:text="@string/splash_screen_bottom_text"
        android:id="@+id/tvBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:gravity="center"
        android:layout_marginBottom="@dimen/splash_bottom_text_margin_bottom"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="12dp"
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:progressDrawable="@drawable/circle_progress_view"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>